# worst-bank

./: .gitignore  CMakeLists.txt  worst.c
include/: menu.c  menu.h
src/: menu.c  menu.h  worst.c
